--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,16 +1,17 @@
 <nav class="navbar navbar-default navbar-static-top navbar-inverse">
-  <div class="container">
-    <ul class="nav navbar-nav">
-      <li class="active">
-        <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
-      </li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Site Navigation<span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="../getPerson">Team Activity 10</a></li>
-            <li><a href="../physics">Physics</a></li>
-          </ul>a
-      </li>
-    </ul>
-  </div>
+    <div class="container">
+        <ul class="nav navbar-nav">
+            <li class="active">
+                <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Site Navigation<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="../sim">Physics Simulation</a></li>
+                    <li><a href="../highscores">Physics Sim High Scores</a></li>
+                    <li><a href="../quotes">Physics Quotes</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </nav>
