--- a/views/physics/sim.ejs
+++ b/views/physics/sim.ejs
@@ -6,6 +6,10 @@
 <body>
 <% include ../partials/nav.ejs %>
 
+<div><canvas id="simCanvas" width="600" height="400">
+
+    </canvas></div>
+
 
 </body>
 </html>
