Added page titles to pages

--- a/views/physics/sim.ejs
+++ b/views/physics/sim.ejs
@@ -8,6 +8,8 @@
 <body>
 <% include ../partials/nav.ejs %>
 
+<h1>Physics Simulation!</h1>
+
 <div><canvas id="simCanvas" width="600" height="400">
 
     </canvas></div>
