Added the query to the quotes page

--- a/views/physics/quotes.ejs
+++ b/views/physics/quotes.ejs
@@ -8,6 +8,15 @@
 
 <h1>Classic Physics Quotes!</h1>
 
+<div id="quotesList"></div>
+
+
+
+<% quotes.forEach(function(entry) { %>
+<h1><%= entry["quote_text"] %></h1>
+<p><%= entry["quote_author"] %></p>
+<% }) %>
+
 
 </body>
 </html>
