added form for launch data

--- a/views/physics/sim.ejs
+++ b/views/physics/sim.ejs
@@ -2,8 +2,6 @@
 <html>
 <head>
     <% include ../partials/header.ejs %>
-
-
 </head>
 <body>
 <% include ../partials/nav.ejs %>
@@ -22,6 +20,12 @@
     ctx.stroke();
 </script>
 
+<form>
+    Launch Angle: <input type="text">
+    Velocity: <input type="text">
+    <button>LAUNCH!</button>
+
+</form>
 
 </body>
 </html>
