added form for submitting new quotes

--- a/views/physics/quotes.ejs
+++ b/views/physics/quotes.ejs
@@ -15,5 +15,13 @@
 <p><%= entry["quote_author"] %></p>
 <% }) %>
 
+
+<form>
+    <h1>Add a New Quote</h1>
+    Quote Text: <input type="text">
+    Author's Name: <input type="text">
+    <button>Submit</button>
+</form>
+
 </body>
 </html>
