--- a/views/physics/sim.ejs
+++ b/views/physics/sim.ejs
@@ -75,6 +75,7 @@
     Launch Angle: <input type="text" id="launchAngle" placeholder="45">
     Velocity: <input type="text" id="velocity" placeholder="50">
     <button id="newTrajectoryButton">New Trajectory</button>
+    <button id="clearTrajectoriesButton">Clear Trajectories</button>
 </form>
 
 <script>
@@ -99,6 +100,25 @@
     });
 
 </script>
+
+<script>
+    let clearTrajectoriesButton = document.getElementById("clearTrajectoriesButton");
+    clearTrajectoriesButton.addEventListener('click', function(e) {
+        e.preventDefault();
+
+        let request = new XMLHttpRequest();
+
+        request.onreadystatechange = function() {
+            if(request.readyState === 4 && request.status === 200) {
+                location.reload();
+            }
+        }
+
+        request.open("delete", "https://agile-depths-52131.herokuapp.com/sim", true);
+        request.send();
+    });
+</script>
+
 
 <div class="form-check form-check-inline" name="trajectoryHistory">
     <% trajectories.forEach(function(entry) { %>
