--- a/views/physics/quotes.ejs
+++ b/views/physics/quotes.ejs
@@ -8,20 +8,41 @@
 
 <h1>Classic Physics Quotes!</h1>
 
-<div id="quotesList"></div>
-
 <% quotes.forEach(function(entry) { %>
 <h1><%= entry["quote_text"] %></h1>
 <p><%= entry["quote_author"] %></p>
 <% }) %>
 
-
 <form>
     <h1>Add a New Quote</h1>
-    Quote Text: <input type="text">
-    Author's Name: <input type="text">
-    <button>Submit</button>
+    Quote Text: <input type="text" id="quote_text">
+    Author's Name: <input type="text" id="quote_author">
+    <button id="submitQuote">Submit</button>
 </form>
+
+<script>
+    let submitQuoteButton = document.getElementById("submitQuote");
+    submitQuoteButton.addEventListener('click', function(e) {
+        e.preventDefault();
+        let quote_text = document.getElementById("quote_text").value;
+        let quote_author = document.getElementById("quote_author").value;
+
+        let request = new XMLHttpRequest();
+
+        request.onreadystatechange = function() {
+            if(request.readyState === 4 && request.status === 200) {
+                location.reload();
+            }
+        }
+
+        request.open("post", "https://agile-depths-52131.herokuapp.com/quotes", true);
+        request.setRequestHeader("Content-type", "application/json");
+        let data = JSON.stringify({"quote_text": quote_text, "quote_author": quote_author});
+        request.send(data);
+    });
+
+</script>
+
 
 </body>
 </html>
