--- a/views/physics/sim.ejs
+++ b/views/physics/sim.ejs
@@ -80,7 +80,7 @@
     <form>
         Launch Angle: <input type="text" id="launchAngle" placeholder="45">
         Velocity: <input type="text" id="velocity" placeholder="50">
-        <button id="newTrajectoryButton">New Trajectory</button>
+        <button id="newTrajectoryButton">Add Trajectory</button>
         <button id="clearTrajectoriesButton">Clear Trajectories</button>
     </form>
 </div>
